--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@2gis/mapgl": "^1.67.0",
+    "@motionone/react": "^10.16.4",
+    "@pbe/react-yandex-maps": "^1.2.5",
+    "@react-google-maps/api": "^2.20.8",
+    "@types/leaflet": "^1.9.21",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.26",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
